# swagger.json
@@ -22,11 +22,34 @@
       "description":"User endpoints"
     },
     {
-      "name":"FoodIntake",
-      "description":"Food endpoints"
+      "name":"Food-water"
     }
   ],
    "paths": {
+     "/api/auth/email": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "check Email",
+
+        "parameters": [],
+
+        "requestBody": {
+          "description": "Registration's object",
+          "required": true,
+
+          "content": {
+            "application/json": {
+              "schema": {"$ref": "#/components/schemas/EmailRequest"}
+            }
+          }
+        },
+        "responses": {
+          "200": {},
+          "400": {"description": "Bad request (invalid request body)" },
+          "409": {"description": "Email already in use!"}
+        }
+      }
+    },
     "/api/auth/signup": {
       "post": {
         "tags": ["Auth"],
@@ -117,18 +140,10 @@
       "get": {
         "tags": ["Auth"],
         "summary": "User currents",
-
-        "parameters": [],
         "security": [{ "Bearer": [] }],
 
-        "requestBody": {
-          "description": "Body object",
-
-          "content": {}
-        },
         "responses": {
           "200": {
-          "description": "Successful operation",
             "content": {
               "application/json": {
                 "schema": {
@@ -138,86 +153,19 @@
             }
           },
           "400": {
-            "description": "Bad request (invalid request body)",
-            "content": {}
+            "description": "Bad request (invalid request body)"
           },
           "401": {
-            "description": "Email or password is wrong!",
-            "content": {}
+            "description": "Email or password is wrong!"
           },
           "404": {
-            "description": "Not found",
-            "content": {}
-          }
-        }
-      }
-    },
-     "/api/auth/logout": {
-      "post": {
-        "tags": ["Auth"],
-        "summary": "User logout",
-
-        "parameters": [],
-        "security": [{ "Bearer": [] }],
-
-        "requestBody": {
-          "description": "Logout's object",
-          "required": true,
-
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/LoginRequest"
-              }
-            }
-          }
-        },
-        "responses": {
-          "204": {
-            "description": "Successful logout",
-            "content": {}
-          },
-          "400": {
-            "description": "Bad request (invalid request body)",
-            "content": {}
-          }
-        }
-      }
-    },
-     "/api/auth/avatar": {
-      "patch": {
-        "tags": ["Auth"],
-        "summary": "User avatar update",
-
-        "parameters": [],
-        "security": [{ "Bearer": [] }],
-
-        "requestBody": {
-          "description": "avatar files",
-          "required": true,
-
-          "content": {
-            "multipart/form-data":{
-              "schema":{
-                "$ref": "#/components/schemas/Avatar"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {}
-          },
-          "400": {
-            "description": "Bad request (invalid request body)",
-            "content": {}
+            "description": "Not found"
           }
         }
       }
     },
     "/api/auth/password":{
-      "patch": {
+      "put": {
         "tags": ["Auth"],
         "summary": "User  password update",
 
@@ -230,7 +178,7 @@
           "content":{
             "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserPassword"
+                  "$ref": "#/components/schemas/LoginRequest"
                 }
               }
           }
@@ -241,7 +189,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserPassword"
+                  "$ref": "#/components/schemas/PasswordResponce"
                 }
               }
             }
@@ -252,6 +200,30 @@
         }
       }
     },
+     "/api/auth/logout": {
+      "post": {
+        "tags": ["Auth"],
+        "summary": "User logout",
+
+        "security": [{ "Bearer": [] }],
+
+        "requestBody": {
+          "description": "Logout's object",
+          "required": true,
+
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/LoginRequest"}
+            }
+          }
+        },
+        "responses": {
+          "204": {"description": "Successful logout"},
+          "400": {"description": "Bad request (invalid request body)"}
+        }
+      }
+    },
+
     "/api/user/statistics":{
       "get": {
         "tags": ["User"],
@@ -323,83 +295,11 @@
         }
       }
     },
-    "/api/user/goal":{
-      "put": {
-        "tags": ["User"],
-        "summary": "User goal update",
-
-        "parameters": [],
-        "security": [{ "Bearer": [] }],
-
-        "requestBody": {
-          "description": "Goal object",
-          "required": true,
-          "content":{
-            "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserGoal"
-                }
-              }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserGoal"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request (invalid request body)"
-          }
-        }
-      }
-    },
-    "/api/user/weight":{
-      "put": {
-        "tags": ["User"],
-        "summary": "User weight update",
-
-        "parameters": [],
-        "security": [{ "Bearer": [] }],
-
-        "requestBody": {
-          "description": "Weight object",
-          "required": true,
-          "content":{
-            "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserWeight"
-                }
-              }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/UserWeight"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request (invalid request body)"
-          }
-        }
-      }
-    },
 
     "/api/user/food-intake":{
       "post": {
-        "tags": ["User"],
-        "summary": "User food intake",
+        "tags": ["Food-water"],
+        "summary": "Add user food intake",
 
         "parameters": [],
         "security": [{ "Bearer": [] }],
@@ -433,8 +333,8 @@
       }
     },
     "/api/user/food-intake/:id":{
-      "post": {
-        "tags": ["User"],
+      "put": {
+        "tags": ["Food-water"],
         "summary": "User food intake",
 
         "parameters": [],
@@ -469,9 +369,30 @@
       }
        
     },
+    "/api/user/recomended-food":{
+      "get": {
+        "tags": ["Food-water"],
+        "summary": "Recommended-food",
+
+        "parameters": [],
+
+        "responses": {
+        "200": {
+          "description": "Successful operation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RecommendedFoodResponse"
+              }
+            }
+          }
+        }
+      }
+    }
+    },
     "/api/user/water-intake":{
       "post": {
-        "tags": ["User"],
+        "tags": ["Food-water"],
         "summary": "User water intake",
 
         "parameters": [],
@@ -504,27 +425,6 @@
           }
         }
       }
-    },
-    "/api/user/recomended-food":{
-      "get": {
-        "tags": ["FoodIntake"],
-        "summary": "Recommended-food",
-
-        "parameters": [],
-
-        "responses": {
-        "200": {
-          "description": "Successful operation",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RecommendedFoodResponse"
-              }
-            }
-          }
-        }
-      }
-    }
     }
   },
   "components": {
@@ -631,18 +531,30 @@
         }
         
       },
+      "EmailRequest": {
+        "type": "object",
+        "required": ["email"],
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "example": "qwerty123"
+          }
+        }
+      },
       "LoginRequest": {
         "type": "object",
         "required": ["email", "password"],
         "properties": {
           "email": {
             "type": "string",
-            "description": "User's email",
             "format": "email"
           },
           "password": {
             "type": "string",
-            "description": "User's password",
             "example": "qwerty123"
           }
       }
@@ -655,10 +567,21 @@
           "example":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"},
         "user":{
             "$ref": "#/components/schemas/UserInformations"
+         }
         }
-        
-      }
-    
+      },
+      "PasswordResponce":{
+         "type": "object",
+      "properties":{
+        "token": {
+          "type":"string",
+          "example":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1MGNiNjc3YjQ3NDllMDcyMDZiYjA3ZiIsImlhdCI6MTY5NTU4Nzc1MSwiZXhwIjoxNjk1Njc0MTUxfQ.OIRmeP5oTcsi59b3Gcx5TOlhYviymzo8AuMA9OX63jU"
+          },
+        "message":{
+            "type":"string",
+            "example":"password updated success"
+          } 
+        }
       },
       "Avatar":{
         "type":"object",
